[gd_scene load_steps=161 format=2]

[ext_resource path="res://art/ennemy/standing/0014.png" type="Texture" id=1]
[ext_resource path="res://art/ennemy/standing/0007.png" type="Texture" id=2]
[ext_resource path="res://actors/Foe.gd" type="Script" id=3]
[ext_resource path="res://art/ennemy/standing/0006.png" type="Texture" id=4]
[ext_resource path="res://art/ennemy/running/0018.png" type="Texture" id=5]
[ext_resource path="res://art/ennemy/running/0019.png" type="Texture" id=6]
[ext_resource path="res://art/ennemy/running/0014.png" type="Texture" id=7]
[ext_resource path="res://art/ennemy/running/0016.png" type="Texture" id=8]
[ext_resource path="res://art/ennemy/running/0017.png" type="Texture" id=9]
[ext_resource path="res://art/ennemy/running/0012.png" type="Texture" id=10]
[ext_resource path="res://art/ennemy/running/0007.png" type="Texture" id=11]
[ext_resource path="res://art/ennemy/running/0015.png" type="Texture" id=12]
[ext_resource path="res://art/ennemy/running/0013.png" type="Texture" id=13]
[ext_resource path="res://art/ennemy/standing/0005.png" type="Texture" id=14]
[ext_resource path="res://art/ennemy/standing/0003.png" type="Texture" id=15]
[ext_resource path="res://art/ennemy/running/0008.png" type="Texture" id=16]
[ext_resource path="res://art/ennemy/standing/0012.png" type="Texture" id=17]
[ext_resource path="res://art/ennemy/standing/0013.png" type="Texture" id=18]
[ext_resource path="res://art/ennemy/standing/0008.png" type="Texture" id=19]
[ext_resource path="res://art/ennemy/running/0000.png" type="Texture" id=20]
[ext_resource path="res://art/ennemy/running/0001.png" type="Texture" id=21]
[ext_resource path="res://art/ennemy/running/0005.png" type="Texture" id=22]
[ext_resource path="res://art/ennemy/running/0004.png" type="Texture" id=23]
[ext_resource path="res://art/ennemy/standing/0016.png" type="Texture" id=24]
[ext_resource path="res://art/ennemy/standing/0004.png" type="Texture" id=25]
[ext_resource path="res://art/ennemy/running/0006.png" type="Texture" id=26]
[ext_resource path="res://art/ennemy/running/0003.png" type="Texture" id=27]
[ext_resource path="res://art/ennemy/standing/0020.png" type="Texture" id=28]
[ext_resource path="res://art/ennemy/standing/0018.png" type="Texture" id=29]
[ext_resource path="res://art/ennemy/standing/0017.png" type="Texture" id=30]
[ext_resource path="res://art/ennemy/standing/0009.png" type="Texture" id=31]
[ext_resource path="res://art/ennemy/standing/0002.png" type="Texture" id=32]
[ext_resource path="res://art/ennemy/standing/0001.png" type="Texture" id=33]
[ext_resource path="res://art/ennemy/standing/0019.png" type="Texture" id=34]
[ext_resource path="res://art/ennemy/standing/0015.png" type="Texture" id=35]
[ext_resource path="res://art/ennemy/running/0009.png" type="Texture" id=36]
[ext_resource path="res://art/ennemy/running/0010.png" type="Texture" id=37]
[ext_resource path="res://art/ennemy/running/0011.png" type="Texture" id=38]
[ext_resource path="res://art/ennemy/standing/0010.png" type="Texture" id=39]
[ext_resource path="res://art/ennemy/running/0002.png" type="Texture" id=40]
[ext_resource path="res://art/ennemy/standing/0011.png" type="Texture" id=41]
[ext_resource path="res://art/ennemy/falling/0006.png" type="Texture" id=42]
[ext_resource path="res://art/ennemy/falling/0000.png" type="Texture" id=43]
[ext_resource path="res://art/ennemy/falling/0003.png" type="Texture" id=44]
[ext_resource path="res://art/ennemy/falling/0002.png" type="Texture" id=45]
[ext_resource path="res://art/ennemy/falling/0005.png" type="Texture" id=46]
[ext_resource path="res://art/ennemy/falling/0007.png" type="Texture" id=47]
[ext_resource path="res://art/ennemy/falling/0001.png" type="Texture" id=48]
[ext_resource path="res://art/ennemy/falling/0004.png" type="Texture" id=49]
[ext_resource path="res://art/ennemy/falling/0008.png" type="Texture" id=50]
[ext_resource path="res://art/ennemy/falling/0009.png" type="Texture" id=51]
[ext_resource path="res://art/ennemy/falling/0010.png" type="Texture" id=52]
[ext_resource path="res://art/ennemy/falling/0011.png" type="Texture" id=53]
[ext_resource path="res://art/ennemy/falling/0012.png" type="Texture" id=54]
[ext_resource path="res://art/ennemy/falling/0013.png" type="Texture" id=55]
[ext_resource path="res://art/ennemy/falling/0014.png" type="Texture" id=56]
[ext_resource path="res://art/ennemy/falling/0015.png" type="Texture" id=57]
[ext_resource path="res://art/ennemy/falling/0016.png" type="Texture" id=58]
[ext_resource path="res://art/ennemy/falling/0017.png" type="Texture" id=59]
[ext_resource path="res://art/ennemy/falling/0018.png" type="Texture" id=60]
[ext_resource path="res://art/ennemy/falling/0019.png" type="Texture" id=61]
[ext_resource path="res://art/ennemy/climbing/0007.png" type="Texture" id=62]
[ext_resource path="res://art/ennemy/climbing/0004.png" type="Texture" id=63]
[ext_resource path="res://art/ennemy/climbing/0005.png" type="Texture" id=64]
[ext_resource path="res://art/ennemy/climbing/0000.png" type="Texture" id=65]
[ext_resource path="res://art/ennemy/climbing/0013.png" type="Texture" id=66]
[ext_resource path="res://art/ennemy/climbing/0011.png" type="Texture" id=67]
[ext_resource path="res://art/ennemy/climbing/0009.png" type="Texture" id=68]
[ext_resource path="res://art/ennemy/climbing/0003.png" type="Texture" id=69]
[ext_resource path="res://art/ennemy/climbing/0001.png" type="Texture" id=70]
[ext_resource path="res://art/ennemy/climbing/0002.png" type="Texture" id=71]
[ext_resource path="res://art/ennemy/climbing/0012.png" type="Texture" id=72]
[ext_resource path="res://art/ennemy/climbing/0010.png" type="Texture" id=73]
[ext_resource path="res://art/ennemy/climbing/0006.png" type="Texture" id=74]
[ext_resource path="res://art/ennemy/climbing/0014.png" type="Texture" id=75]
[ext_resource path="res://art/ennemy/climbing/0015.png" type="Texture" id=76]
[ext_resource path="res://art/ennemy/climbing/0016.png" type="Texture" id=77]
[ext_resource path="res://art/ennemy/climbing/0008.png" type="Texture" id=78]
[ext_resource path="res://art/ennemy/climbing/0017.png" type="Texture" id=79]
[ext_resource path="res://art/ennemy/climbing/0018.png" type="Texture" id=80]
[ext_resource path="res://art/ennemy/climbing/0019.png" type="Texture" id=81]
[ext_resource path="res://art/ennemy/stand_climbing/0008.png" type="Texture" id=82]
[ext_resource path="res://art/ennemy/stand_climbing/0006.png" type="Texture" id=83]
[ext_resource path="res://art/ennemy/stand_climbing/0003.png" type="Texture" id=84]
[ext_resource path="res://art/ennemy/stand_climbing/0001.png" type="Texture" id=85]
[ext_resource path="res://art/ennemy/stand_climbing/0009.png" type="Texture" id=86]
[ext_resource path="res://art/ennemy/stand_climbing/0010.png" type="Texture" id=87]
[ext_resource path="res://art/ennemy/stand_climbing/0005.png" type="Texture" id=88]
[ext_resource path="res://art/ennemy/stand_climbing/0004.png" type="Texture" id=89]
[ext_resource path="res://art/ennemy/stand_climbing/0002.png" type="Texture" id=90]
[ext_resource path="res://art/ennemy/stand_climbing/0000.png" type="Texture" id=91]
[ext_resource path="res://art/ennemy/stand_climbing/0007.png" type="Texture" id=92]
[ext_resource path="res://art/ennemy/stand_climbing/0011.png" type="Texture" id=93]
[ext_resource path="res://art/ennemy/stand_climbing/0012.png" type="Texture" id=94]
[ext_resource path="res://art/ennemy/stand_climbing/0013.png" type="Texture" id=95]
[ext_resource path="res://art/ennemy/stand_climbing/0014.png" type="Texture" id=96]
[ext_resource path="res://art/ennemy/stand_climbing/0015.png" type="Texture" id=97]
[ext_resource path="res://art/ennemy/stand_climbing/0016.png" type="Texture" id=98]
[ext_resource path="res://art/ennemy/stand_climbing/0017.png" type="Texture" id=99]
[ext_resource path="res://art/ennemy/stand_climbing/0018.png" type="Texture" id=100]
[ext_resource path="res://art/ennemy/stand_climbing/0019.png" type="Texture" id=101]
[ext_resource path="res://actors/ActorAnims.gd" type="Script" id=102]
[ext_resource path="res://art/ennemy/stand_rope/0003.png" type="Texture" id=103]
[ext_resource path="res://art/ennemy/stand_rope/0017.png" type="Texture" id=104]
[ext_resource path="res://art/ennemy/stand_rope/0010.png" type="Texture" id=105]
[ext_resource path="res://art/ennemy/stand_rope/0000.png" type="Texture" id=106]
[ext_resource path="res://art/ennemy/stand_rope/0011.png" type="Texture" id=107]
[ext_resource path="res://art/ennemy/stand_rope/0006.png" type="Texture" id=108]
[ext_resource path="res://art/ennemy/stand_rope/0005.png" type="Texture" id=109]
[ext_resource path="res://art/ennemy/stand_rope/0002.png" type="Texture" id=110]
[ext_resource path="res://art/ennemy/stand_rope/0015.png" type="Texture" id=111]
[ext_resource path="res://art/ennemy/stand_rope/0018.png" type="Texture" id=112]
[ext_resource path="res://art/ennemy/stand_rope/0014.png" type="Texture" id=113]
[ext_resource path="res://art/ennemy/stand_rope/0008.png" type="Texture" id=114]
[ext_resource path="res://art/ennemy/stand_rope/0007.png" type="Texture" id=115]
[ext_resource path="res://art/ennemy/stand_rope/0009.png" type="Texture" id=116]
[ext_resource path="res://art/ennemy/stand_rope/0016.png" type="Texture" id=117]
[ext_resource path="res://art/ennemy/stand_rope/0004.png" type="Texture" id=118]
[ext_resource path="res://art/ennemy/stand_rope/0012.png" type="Texture" id=119]
[ext_resource path="res://art/ennemy/stand_rope/0013.png" type="Texture" id=120]
[ext_resource path="res://art/ennemy/stand_rope/0001.png" type="Texture" id=121]
[ext_resource path="res://art/ennemy/stand_rope/0019.png" type="Texture" id=122]
[ext_resource path="res://art/ennemy/rope/0010.png" type="Texture" id=123]
[ext_resource path="res://art/ennemy/rope/0015.png" type="Texture" id=124]
[ext_resource path="res://art/ennemy/rope/0004.png" type="Texture" id=125]
[ext_resource path="res://art/ennemy/rope/0001.png" type="Texture" id=126]
[ext_resource path="res://art/ennemy/rope/0000.png" type="Texture" id=127]
[ext_resource path="res://art/ennemy/rope/0014.png" type="Texture" id=128]
[ext_resource path="res://art/ennemy/rope/0005.png" type="Texture" id=129]
[ext_resource path="res://art/ennemy/rope/0006.png" type="Texture" id=130]
[ext_resource path="res://art/ennemy/rope/0009.png" type="Texture" id=131]
[ext_resource path="res://art/ennemy/rope/0013.png" type="Texture" id=132]
[ext_resource path="res://art/ennemy/rope/0012.png" type="Texture" id=133]
[ext_resource path="res://art/ennemy/rope/0011.png" type="Texture" id=134]
[ext_resource path="res://art/ennemy/rope/0002.png" type="Texture" id=135]
[ext_resource path="res://art/ennemy/rope/0008.png" type="Texture" id=136]
[ext_resource path="res://art/ennemy/rope/0017.png" type="Texture" id=137]
[ext_resource path="res://art/ennemy/rope/0019.png" type="Texture" id=138]
[ext_resource path="res://art/ennemy/rope/0007.png" type="Texture" id=139]
[ext_resource path="res://art/ennemy/rope/0003.png" type="Texture" id=140]
[ext_resource path="res://art/ennemy/rope/0018.png" type="Texture" id=141]
[ext_resource path="res://art/ennemy/rope/0016.png" type="Texture" id=142]
[ext_resource path="res://art/ennemy/out/0004.png" type="Texture" id=143]
[ext_resource path="res://art/ennemy/out/0005.png" type="Texture" id=144]
[ext_resource path="res://art/ennemy/out/0001.png" type="Texture" id=145]
[ext_resource path="res://art/ennemy/out/0003.png" type="Texture" id=146]
[ext_resource path="res://art/ennemy/out/0013.png" type="Texture" id=147]
[ext_resource path="res://art/ennemy/out/0011.png" type="Texture" id=148]
[ext_resource path="res://art/ennemy/out/0007.png" type="Texture" id=149]
[ext_resource path="res://art/ennemy/out/0009.png" type="Texture" id=150]
[ext_resource path="res://art/ennemy/out/0010.png" type="Texture" id=151]
[ext_resource path="res://art/ennemy/out/0006.png" type="Texture" id=152]
[ext_resource path="res://art/ennemy/out/0012.png" type="Texture" id=153]
[ext_resource path="res://art/ennemy/out/0015.png" type="Texture" id=154]
[ext_resource path="res://art/ennemy/out/0014.png" type="Texture" id=155]
[ext_resource path="res://art/ennemy/out/0008.png" type="Texture" id=156]
[ext_resource path="res://art/ennemy/out/0000.png" type="Texture" id=157]
[ext_resource path="res://art/ennemy/out/0002.png" type="Texture" id=158]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 13.5, 18 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 65 ), ExtResource( 70 ), ExtResource( 71 ), ExtResource( 69 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 74 ), ExtResource( 62 ), ExtResource( 78 ), ExtResource( 68 ), ExtResource( 73 ), ExtResource( 67 ), ExtResource( 72 ), ExtResource( 66 ), ExtResource( 75 ), ExtResource( 76 ), ExtResource( 77 ), ExtResource( 79 ), ExtResource( 80 ), ExtResource( 81 ) ],
"loop": true,
"name": "climb",
"speed": 70.0
}, {
"frames": [ ExtResource( 43 ), ExtResource( 48 ), ExtResource( 45 ), ExtResource( 44 ), ExtResource( 49 ), ExtResource( 46 ), ExtResource( 42 ), ExtResource( 47 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ) ],
"loop": true,
"name": "fall",
"speed": 35.0
}, {
"frames": [ ExtResource( 145 ), ExtResource( 158 ), ExtResource( 146 ), ExtResource( 143 ), ExtResource( 144 ), ExtResource( 152 ), ExtResource( 149 ), ExtResource( 156 ), ExtResource( 150 ), ExtResource( 151 ), ExtResource( 148 ), ExtResource( 153 ), ExtResource( 147 ), ExtResource( 155 ), ExtResource( 157 ), ExtResource( 154 ) ],
"loop": false,
"name": "out",
"speed": 20.0
}, {
"frames": [ ExtResource( 127 ), ExtResource( 126 ), ExtResource( 135 ), ExtResource( 140 ), ExtResource( 125 ), ExtResource( 129 ), ExtResource( 130 ), ExtResource( 139 ), ExtResource( 136 ), ExtResource( 131 ), ExtResource( 123 ), ExtResource( 134 ), ExtResource( 133 ), ExtResource( 132 ), ExtResource( 128 ), ExtResource( 124 ), ExtResource( 142 ), ExtResource( 137 ), ExtResource( 141 ), ExtResource( 138 ) ],
"loop": true,
"name": "rope",
"speed": 50.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 21 ), ExtResource( 40 ), ExtResource( 27 ), ExtResource( 23 ), ExtResource( 22 ), ExtResource( 26 ), ExtResource( 11 ), ExtResource( 16 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 7 ), ExtResource( 12 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "run_left",
"speed": 35.0
}, {
"frames": [ ExtResource( 91 ), ExtResource( 85 ), ExtResource( 90 ), ExtResource( 84 ), ExtResource( 89 ), ExtResource( 88 ), ExtResource( 83 ), ExtResource( 92 ), ExtResource( 82 ), ExtResource( 86 ), ExtResource( 87 ), ExtResource( 93 ), ExtResource( 94 ), ExtResource( 95 ), ExtResource( 96 ), ExtResource( 97 ), ExtResource( 98 ), ExtResource( 99 ), ExtResource( 100 ), ExtResource( 101 ) ],
"loop": true,
"name": "stand_climb",
"speed": 20.0
}, {
"frames": [ ExtResource( 33 ), ExtResource( 32 ), ExtResource( 15 ), ExtResource( 25 ), ExtResource( 14 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 19 ), ExtResource( 31 ), ExtResource( 39 ), ExtResource( 41 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 1 ), ExtResource( 35 ), ExtResource( 24 ), ExtResource( 30 ), ExtResource( 29 ), ExtResource( 34 ), ExtResource( 28 ) ],
"loop": true,
"name": "stand_left",
"speed": 20.0
}, {
"frames": [ ExtResource( 106 ), ExtResource( 121 ), ExtResource( 110 ), ExtResource( 103 ), ExtResource( 118 ), ExtResource( 109 ), ExtResource( 108 ), ExtResource( 115 ), ExtResource( 114 ), ExtResource( 116 ), ExtResource( 105 ), ExtResource( 107 ), ExtResource( 119 ), ExtResource( 120 ), ExtResource( 113 ), ExtResource( 111 ), ExtResource( 117 ), ExtResource( 104 ), ExtResource( 112 ), ExtResource( 122 ) ],
"loop": true,
"name": "stand_rope",
"speed": 20.0
}, {
"frames": [ ExtResource( 43 ), ExtResource( 48 ), ExtResource( 45 ), ExtResource( 44 ), ExtResource( 49 ), ExtResource( 46 ), ExtResource( 42 ), ExtResource( 47 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ) ],
"loop": true,
"name": "trapped",
"speed": 10.0
} ]

[node name="Foe" type="Area2D" groups=["foes"]]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 20.5, 20 )
shape = SubResource( 3 )

[node name="Anims" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "stand_left"
offset = Vector2( 20, 20 )
script = ExtResource( 102 )

[node name="BlockedTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="FoeLabel" type="Label" parent="."]
visible = false
margin_left = -54.0
margin_top = -22.0
margin_right = -14.0
margin_bottom = -8.0

[connection signal="timeout" from="BlockedTimer" to="." method="_on_BlockedTimer_timeout"]
